# TCC

./: README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/workflows/: cd.yml  ci.yml
.husky/: pre-commit
ia/: .gitignore  Dockerfile  README.md  package.json  pyproject.toml
ia/data/processed/: dataset_youtube_ml_features.csv
ia/data/raw/: dataset_youtube_processado_modulo2.csv  dataset_youtube_processado_modulo2_old.csv  teste.py
ia/models/: nicho_similaridade.pkl
ia/models/padroes_virais/: esquetes.json  historias denso.json  historias_denso.json  nicho_similaridade.json  nicho_similaridade.pkl  satisfying.json  street interview.json  street_interview.json  tech review.json  tech_review.json
ia/models/predictors/: motor_modelo.pkl  motor_modelo_metricas.json
ia/models/preprocessors/: encoder_categoricas.pkl  feature_names.json  label_encoder.pkl  log_cols.json  matriz_ml.pkl  scaler_numericas.pkl  tfidf_descricao.pkl  tfidf_roteiro.pkl  tfidf_seo.pkl  tfidf_thumb.pkl  tfidf_titulo.pkl
ia/src/: main.py  test_main.py
ia/src/api/: rotas.py  schemas.py
ia/src/core/: config.py  supabase_client.py
ia/src/pipelines/: 01_eda.py  02_pre_processa.py  03_treinamento.py
ia/src/pipelines/utils/: analisar_texto_colunas_novas.py  analisar_texto_grupo2.py  analise_colunas_novas.py
ia/src/services/: inferencia_ml.py  llm.py
server/: .env.example  .env.prod.example  .env.test.example  Dockerfile  README.md  package.json
server/prisma/: schema.prisma  seed.ts
server/src/: server.ts
server/src/router/: v1.ts
server/src/validateEnv/: index.ts
web/: .gitignore  Dockerfile  README.md  package.json
web/actions/: feedbacks.actions.ts  generations.actions.ts  niches.actions.ts  users.actions.ts
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  providers.tsx
web/app/(admin)/: layout.tsx
web/app/(auth)/: layout.tsx
web/app/(public)/: layout.tsx
web/app/(sandbox)/: layout.tsx
web/components/ui/: alert-dialog.tsx  carousel.tsx  popover.tsx
web/e2e/: dummy.spec.ts
web/hooks/: use-feedbacks.ts  use-generations.ts  use-niches.ts  use-users.ts
web/lib/animations/: fade.ts
web/schemas/: feedbacks.schema.ts  generations.schema.ts  niches.schema.ts  users.schema.ts
web/services/: feedbacks.service.ts  generations.service.ts  niches.service.ts  users.service.ts
web/types/: enums.ts  feedbacks.types.ts  generations.types.ts  index.ts  niches.types.ts  users.types.ts
(+125 files in other folders)
