[project]
name = "ia"
version = "0.1.0"
description = "API de IA para o TCC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "emoji>=2.15.0",
    "fastapi[standard]>=0.135.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.0.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "supabase>=2.28.3",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 320
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
