[project]
name = "ia"
version = "0.1.0"
description = "API de IA para o TCC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "emoji>=2.15.0",
    "en-core-web-sm",
    "fast-langdetect>=1.0.1",
    "fastapi[standard]>=0.135.1",
    "google-genai>=2.9.0",
    "hdbscan>=0.8.44",
    "langdetect>=1.0.9",
    "lingua-language-detector>=2.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "nrclex>=4.1.0",
    "numpy>=2.0.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "spacy-ngram>=1.0.1",
    "supabase>=2.28.3",
    "textblob>=0.20.0",
    "textdescriptives>=2.8.2",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 320
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
